src/objects/ints__TUCR_ConsumerStatement__c.object
<CustomObject>
    <fields>
        <fullName>ints__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipName>Consumer_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TUCR Consumer Statement</label>
    <nameField>
        <displayFormat>TUCR_CS-{000000000}</displayFormat>
        <label>Consumer Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Consumer Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>